# Camus-Python

./: .env  .gitignore  .travis.yml  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml
app/: database.py  main.py
app/controllers/: brand.py  ingredient.py
app/models/: __init__.py  brand.py  ingredient.py
app/routers/: __init__.py  brand.py  ingredient.py
app/schemas/: brand.py  ingredient.py
tests/: __init__.py  conftest.py  test_main.py
tests/brands/: test_crud.py
tests/ingeredients/: __init__.py  test_crud.py
